# ssnake

./: CMakeLists.txt  run.sh  win-run.cmd
assets/: element_effects.conf  element_reactions.conf
assets/config/: example.ini  food.ini  game.ini  windows.ini
assets/shaders/: square.vert
boring/: 1.txt
include/core/: element.h  food.h  food_config.h  snake.h  state.h
include/render/: background_effect.h  coordinate.h  gl_init.h  shader.h  square_renderer.h
include/scene/: scene.h
include/utils/: fsm.h  ini_parser.h  knode.h  memory.h
include/window/: window.h
src/: CMakeLists.txt  main.c
src/core/: element.c  element_example.c  food.c  food_config.c  snake.c  state.c
src/render/: background_effect.c  coordinate.c  gl_init.c  shader.c  square_renderer.c
src/scene/: scene.c
src/utils/: glad.c  ini_parser.c  memory.c
src/window/: window.c
