CMAKE_MINIMUM_REQUIRED(VERSION 3.28)

file(GLOB_RECURSE SRC_LIST
    "./*.c"
)

if (APPLE)
    SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/mac)
endif()

if (WIN32)
    SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/win)
endif()

if (UNIX)
    SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/linux)
endif()

ADD_EXECUTABLE(snake-c ${SRC_LIST})




